# openttd-llm

./: .env.example  .gitignore  OpenTTDLLM  README.md  commands.nut  main.py  pyproject.toml  state.json
OpenTTDLLM/: commands.nut  info.nut  main.nut
src/: llm.py  log_parser.py  openttd.py  state.py
